[Harsh veer singh] Refactor. changes in the main file -> rotate the list test file added📦